Edit the footer background color

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,16 +1,18 @@
-<div class=" bg-black text-white container">
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
-    <div class="col">
-      <h2>Get in touch</h2>
-      <div class="link">
-        <a href="mailto:mina.nabil.asaad@gmail.com" class="link-light">E-mail</a>
+<div class="bg-black">
+  <div class=" text-white container">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+      <div class="col">
+        <h2>Get in touch</h2>
+        <div class="link">
+          <a href="mailto:mina.nabil.asaad@gmail.com" class="link-light">E-mail</a>
+        </div>
+        <div class="link">
+          <a href="tel:+201067082914" class="link-light">+20 106 708 2914</a>
+        </div>
       </div>
-      <div class="link">
-        <a href="tel:+201067082914" class="link-light">+20 106 708 2914</a>
+      <div class="col" style="position: relative;">
+        <button type="button" class=" btn btn-outline-light">contact me</button>
       </div>
-    </div>
-    <div class="col" style="position: relative;">
-      <button type="button" class=" btn btn-outline-light">contact me</button>
     </div>
   </div>
 </div>
