--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<app-header></app-header>
-<app-about-me></app-about-me>
-<app-skills></app-skills>
-<app-portfolio></app-portfolio>
-<app-footer></app-footer>
+<app-users></app-users>
